Typesikker sektor (#389)
Typesikker sektor 

--- 
Co-authored-by: @oddgfa