@@ -1,21 +1,9 @@
 package no.nav.arbeidsgiver.sykefravarsstatistikk.api.statistikk.sykefraværshistorikk;
 
-import static no.nav.arbeidsgiver.sykefravarsstatistikk.api.TestData.*;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-
-import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.List;
-
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.applikasjon.domenemodeller.*;
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.infrastruktur.enhetsregisteret.EnhetsregisteretClient;
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.infrastruktur.database.KlassifikasjonerRepository;
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.applikasjon.SektorMappingService;
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.applikasjon.domenemodeller.Statistikkategori;
-import no.nav.arbeidsgiver.sykefravarsstatistikk.api.infrastruktur.database.KvartalsvisSykefraværRepository;
 import no.nav.arbeidsgiver.sykefravarsstatistikk.api.applikasjon.aggregering.KvartalsvisSykefraværshistorikkService;
+import no.nav.arbeidsgiver.sykefravarsstatistikk.api.applikasjon.domenemodeller.*;
+import no.nav.arbeidsgiver.sykefravarsstatistikk.api.infrastruktur.database.KlassifikasjonerRepository;
+import no.nav.arbeidsgiver.sykefravarsstatistikk.api.infrastruktur.database.KvartalsvisSykefraværRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,12 +11,18 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.EmptyResultDataAccessException;
 
+import java.math.BigDecimal;
+import java.util.List;
+
+import static no.nav.arbeidsgiver.sykefravarsstatistikk.api.TestData.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
 public class KvartalsvisSykefraværshistorikkServiceTest {
 
   @Mock private KvartalsvisSykefraværRepository kvartalsvisSykefraværprosentRepository;
-  @Mock private EnhetsregisteretClient enhetsregisteretClient;
-  @Mock private SektorMappingService sektorMappingService;
   @Mock private KlassifikasjonerRepository klassifikasjonerRepository;
 
   KvartalsvisSykefraværshistorikkService kvartalsvisSykefraværshistorikkService;
@@ -38,17 +32,14 @@ public class KvartalsvisSykefraværshistorikkServiceTest {
     kvartalsvisSykefraværshistorikkService =
         new KvartalsvisSykefraværshistorikkService(
             kvartalsvisSykefraværprosentRepository,
-            sektorMappingService,
             klassifikasjonerRepository);
 
-    when(sektorMappingService.mapTilSSBSektorKode(any()))
-        .thenReturn(new Sektor("1", "Statlig forvaltning"));
     when(kvartalsvisSykefraværprosentRepository.hentKvartalsvisSykefraværprosentLand())
-        .thenReturn(Arrays.asList(sykefraværprosent("Norge")));
+        .thenReturn(List.of(sykefraværprosent()));
     when(kvartalsvisSykefraværprosentRepository.hentKvartalsvisSykefraværprosentSektor(any()))
-        .thenReturn(Arrays.asList(sykefraværprosent("Statlig forvlatning")));
+        .thenReturn(List.of(sykefraværprosent()));
     when(kvartalsvisSykefraværprosentRepository.hentKvartalsvisSykefraværprosentVirksomhet(any()))
-        .thenReturn(Arrays.asList(sykefraværprosent("Test Virksomhet")));
+        .thenReturn(List.of(sykefraværprosent()));
   }
 
   @Test
@@ -58,7 +49,7 @@ public class KvartalsvisSykefraværshistorikkServiceTest {
 
     List<KvartalsvisSykefraværshistorikk> kvartalsvisSykefraværshistorikk =
         kvartalsvisSykefraværshistorikkService.hentSykefraværshistorikk(
-            enUnderenhet("999999998"), enInstitusjonellSektorkode());
+            enUnderenhet("999999998"), Sektor.STATLIG);
 
     verify(kvartalsvisSykefraværprosentRepository, times(0))
         .hentKvartalsvisSykefraværprosentNæring(any());
@@ -77,7 +68,7 @@ public class KvartalsvisSykefraværshistorikkServiceTest {
 
     List<KvartalsvisSykefraværshistorikk> kvartalsvisSykefraværshistorikk =
         kvartalsvisSykefraværshistorikkService.hentSykefraværshistorikk(
-            underenhet, enInstitusjonellSektorkode());
+            underenhet, Sektor.PRIVAT);
 
     assertThatHistorikkHarKategori(kvartalsvisSykefraværshistorikk, Statistikkategori.NÆRING, true);
     assertThatHistorikkHarKategori(kvartalsvisSykefraværshistorikk, Statistikkategori.LAND, true);
@@ -98,7 +89,7 @@ public class KvartalsvisSykefraværshistorikkServiceTest {
         .isEqualTo(expected);
   }
 
-  private static SykefraværForEttKvartal sykefraværprosent(String label) {
+  private static SykefraværForEttKvartal sykefraværprosent() {
     return new SykefraværForEttKvartal(
         new ÅrstallOgKvartal(2019, 1), new BigDecimal(50), new BigDecimal(100), 10);
   }
